support scf secret

--- a/dashboard.html
+++ b/dashboard.html
@@ -509,6 +509,10 @@
 
 	<!--jquery-1.12.4.min.js-->
 	<script src="assets/vendor/jquery/jquery.min.js"></script>
+	<script src="assets/vendor/jquery/jquery.slimscroll.min.js"></script>
+	<script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
+	<script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
+	<!--jquery.slimscroll.min.js-->
 
 	<!--chartist.min.js-->
 	<script src="assets/vendor/chartist/js/chartist.min.js"></script>
@@ -518,8 +522,6 @@
 	<!--bootstrap.min.js-->
 	<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 
-	<!--jquery.slimscroll.min.js-->
-	<script src="assets/vendor/jquery/jquery.slimscroll.min.js"></script>
 
 	<!--feather.min.js-->
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
@@ -531,6 +533,11 @@
 
 	<!--fontawesome-all.min.js-->
 	<script src="assets/js/fontawesome-all.min.js"></script>
+
+	<!-- Crypto-js.js -->
+	<script src="assets/vendor/crypto-js/core-min.js"></script>
+	<script src="assets/vendor/crypto-js/hmac-sha1.js"></script>
+	<script src="assets/vendor/crypto-js/enc-base64-min.js"></script>
 
 	<!--Custom JS-->
 	<script src="assets/js/custom.js"></script>
