--- a/register.html
+++ b/register.html
@@ -73,16 +73,20 @@
       </div>
     </div>
   </div>
-  <!-- JavaScript files-->
+  <!-- JavaScript files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <!-- <script src="assets/vendor/popper.js/umd/popper.min.js"> </script> -->
+  <script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
+  <script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
+
+  <script src="assets/vendor/crypto-js/core-min.js"></script>
+  <script src="assets/vendor/crypto-js/hmac-sha1.js"></script>
+  <script src="assets/vendor/crypto-js/enc-base64-min.js"></script>
+
   <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
-  <script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
-  <!-- <script src="assets/vendor/chart.js/Chart.min.js"></script> -->
-  <script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
-  <script src="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
   <!-- Main File-->
+  <script src="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script src="assets/js/custom.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
 
