--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ITER HR</title>
+  <title>ABHouse</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
@@ -51,11 +51,10 @@
               <label for="login-password" class="label-material">Password</label>
             </div>
             <div class="form-group text-center">
-              <!-- <a id="login" href="index.html" class="btn btn-primary">Login</a> -->
               <input id="login" type="submit" value="login" class="btn btn-primary">
             </div>
           </form>
-          
+
           <a href="#" class="forgot-pass">Forgot Password?</a>
 
 
@@ -70,14 +69,18 @@
   </div>
   <!-- JavaScript files-->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <!-- <script src="assets/vendor/popper.js/umd/popper.min.js"> </script> -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
   <script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
-  <!-- <script src="assets/vendor/chart.js/Chart.min.js"></script> -->
   <script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
+
+  <script src="assets/vendor/crypto-js/core-min.js"></script>
+  <script src="assets/vendor/crypto-js/hmac-sha1.js"></script>
+  <script src="assets/vendor/crypto-js/enc-base64-min.js"></script>
+
+  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
   <!-- Main File-->
+  <script src="assets/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
+  <script src="assets/js/custom.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
 
