--- a/dashboard.html
+++ b/dashboard.html
@@ -508,7 +508,7 @@
 
 
 	<!--jquery-1.12.4.min.js-->
-	<script src="assets/vendor/jquery/jquery.min.js"></script>
+	<script src="assets/vendor/jquery/jquery-3.4.1.min.js"></script>
 	<script src="assets/vendor/jquery/jquery.slimscroll.min.js"></script>
 	<script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
 	<script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
