--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   </div>
   <!-- JavaScript files-->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/jquery/jquery-3.4.1.min.js"></script>
   <script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
   <script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
 
