--- a/dashboard.html
+++ b/dashboard.html
@@ -540,6 +540,7 @@
 	<script src="assets/vendor/crypto-js/enc-base64-min.js"></script>
 
 	<!--Custom JS-->
+	<script src="assets/js/fc.js"></script>
 	<script src="assets/js/custom.js"></script>
 
 </body>
