--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <script src="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
   <!-- Main File-->
   <script src="assets/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="assets/js/fc.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
 
