--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh_cn">
 
 <head>
 	<!-- META DATA -->
@@ -15,22 +15,22 @@
 	<!--<link rel="shortcat icon" href="/favicon.ico" type="image/x-icon">-->
 
 	<!--font-awesome.min.css-->
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
 
 	<!-- linear icon css
 	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"> -->
 
 	<!--chartist.min.css-->
-	<link rel="stylesheet" href="assets/vendor/chartist/css/chartist.min.css">
+	<link rel="stylesheet" href="./assets/vendor/chartist/css/chartist.min.css">
 
 	<!--bootstrap.min.css-->
-	<link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
 
 	<!--style.css-->
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/dashboard.css">
 
 	<!--responsive.css-->
-	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link rel="stylesheet" href="./assets/css/responsive.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -111,7 +111,7 @@
 						</li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								<img src="assets/images/parson.png" class="img-circle" alt="parson-img">
+								<img src="./assets/images/parson.png" class="img-circle" alt="parson-img">
 								<i class="icon-submenu fa fa-angle-down"></i>
 							</a>
 							<ul class="dropdown-menu">
@@ -221,7 +221,7 @@
 								<div class="profile-state">
 									<div class="icon-box">
 										<span class="icon-bg icon-bg-1">
-											<img src="assets/images/user-icon.png" alt="user-icon">
+											<img src="./assets/images/user-icon.png" alt="user-icon">
 										</span>
 										<h2>total visitors</h2>
 									</div>
@@ -236,7 +236,7 @@
 								<div class="profile-state">
 									<div class="icon-box">
 										<span class="icon-bg icon-bg-2">
-											<img src="assets/images/add-cart.png" alt="add-cart">
+											<img src="./assets/images/add-cart.png" alt="add-cart">
 										</span>
 										<h2>total order placeed</h2>
 									</div>
@@ -251,7 +251,7 @@
 								<div class="profile-state">
 									<div class="icon-box">
 										<span class="icon-bg icon-bg-3">
-											<img src="assets/images/money-icon.png" alt="money-icon">
+											<img src="./assets/images/money-icon.png" alt="money-icon">
 										</span>
 										<h2>total profit</h2>
 									</div>
@@ -266,7 +266,7 @@
 								<div class="profile-state">
 									<div class="icon-box">
 										<span class="icon-bg icon-bg-4">
-											<img src="assets/images/plane-icon.png" alt="deliver-icon">
+											<img src="./assets/images/plane-icon.png" alt="deliver-icon">
 										</span>
 										<h2>delivery peocessing</h2>
 									</div>
@@ -508,40 +508,40 @@
 
 
 	<!--jquery-1.12.4.min.js-->
-	<script src="assets/vendor/jquery/jquery-3.4.1.min.js"></script>
-	<script src="assets/vendor/jquery/jquery.slimscroll.min.js"></script>
-	<script src="assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
-	<script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
+	<script src="./assets/vendor/jquery/jquery-3.4.1.min.js"></script>
+	<script src="./assets/vendor/jquery/jquery.slimscroll.min.js"></script>
+	<script src="./assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
+	<script src="./assets/vendor/jquery-validation/jquery.validate.min.js"></script>
 	<!--jquery.slimscroll.min.js-->
 
 	<!--chartist.min.js-->
-	<script src="assets/vendor/chartist/js/chartist.min.js"></script>
-	<script src="assets/vendor/chartist/js/chartist-tooltip-plugin.js"></script>
-	<script src="assets/vendor/chartist/js/chartist-custom.js"></script>
+	<script src="./assets/vendor/chartist/js/chartist.min.js"></script>
+	<script src="./assets/vendor/chartist/js/chartist-tooltip-plugin.js"></script>
+	<script src="./assets/vendor/chartist/js/chartist-custom.js"></script>
 
 	<!--bootstrap.min.js-->
-	<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="./assets/vendor/bootstrap-4.3.1/js/bootstrap.min.js"></script>
 
 
 	<!--feather.min.js-->
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
 	<!-- DataMaps Plugin Js -->
-	<script src="assets/js/d3.min.js"></script>
-	<script src="assets/js/topojson.js"></script>
-	<script src="assets/js/datamaps.world.min.js"></script>
+	<script src="./assets/js/d3.min.js"></script>
+	<script src="./assets/js/topojson.js"></script>
+	<script src="./assets/js/datamaps.world.min.js"></script>
 
 	<!--fontawesome-all.min.js-->
-	<script src="assets/js/fontawesome-all.min.js"></script>
+	<script src="./assets/js/fontawesome-all.min.js"></script>
 
 	<!-- Crypto-js.js -->
-	<script src="assets/vendor/crypto-js/core-min.js"></script>
-	<script src="assets/vendor/crypto-js/hmac-sha1.js"></script>
-	<script src="assets/vendor/crypto-js/enc-base64-min.js"></script>
+	<script src="./assets/vendor/crypto-js/core-min.js"></script>
+	<script src="./assets/vendor/crypto-js/hmac-sha1.js"></script>
+	<script src="./assets/vendor/crypto-js/enc-base64-min.js"></script>
 
 	<!--Custom JS-->
-	<script src="assets/js/fc.js"></script>
-	<script src="assets/js/custom.js"></script>
+	<script src="./assets/js/fc.js"></script>
+	<script src="./assets/js/dashboard.js"></script>
 
 </body>
 
