--- a/dashboard.html
+++ b/dashboard.html
@@ -474,7 +474,7 @@
     <!-- END WRAPPER -->
 
 
-    <!--jquery-1.12.4.min.js-->
+    <!--jquery-3.4.1.min.js-->
     <script src="./assets/vendor/jquery/jquery-3.4.1.min.js"></script>
     <script src="./assets/vendor/jquery/jquery.slimscroll.min.js"></script>
     <script src="./assets/vendor/jquery.cookie/jquery.cookie.js"> </script>
@@ -491,7 +491,8 @@
 
 
     <!--feather.min.js-->
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script> -->
+    <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- DataMaps Plugin Js -->
     <script src="./assets/js/d3.min.js"></script>
