--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
     <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="./assets/vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
     <!-- Fontastic Custom icon font-->
     <!-- <link rel="stylesheet" href="./assets/css/fontastic.css"> -->
     <!-- Google fonts - Roboto -->
@@ -25,7 +25,7 @@
     <!-- Custom stylesheet - for your changes-->
     <!-- <link rel="stylesheet" href="./assets/css/custom.css"> -->
     <!-- Favicon-->
-    <link rel="shortcut icon" href="./assets/images/favicon.ico">
+    <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
