--- a/test.html
+++ b/test.html
@@ -2,92 +2,82 @@
 <html lang="zh_cn">
 
 <head>
-    <!-- META DATA -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ABHouse</title>
-    <!--bootstrap.min.css-->
-    <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
-    <!--style.css-->
-    <link rel="stylesheet" href="./assets/css/dashboard.css">
-    <!--[if lt IE 9]>
+  <!-- META DATA -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>ABHouse Test</title>
+  <!-- favicon -->
+  <link rel="icon" href="./assets/images/favicon.png">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 </head>
 
 <body>
-    <!-- wrapper -->
-    <div id="wrapper">
-        <!-- navbar -->
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <!--/.brand -->
-            <!-- <div class="container-fluid"> -->
-            <!--/form -->
-            <!-- <div class="navbar-menu"> -->
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle icon-menu" data-toggle="dropdown">
-                        <i data-feather="bell"></i>
-                        <span class="badge badge-bg-1">2</span>
-                    </a>
-                    <ul class="dropdown-menu notifications">
-                        <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>System
-                                space is almost full</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-danger"></span>You have 9
-                                unfinished tasks</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Monthly
-                                report is available</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>Weekly
-                                meeting in 1 hour</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Your
-                                request has been approved</a></li>
-                        <li><a href="#" class="more">See all notifications</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle icon-menu" data-toggle="dropdown">
-                        <i data-feather="mail"></i>
-                        <span class="badge badge-bg-1">3</span>
-                    </a>
-                    <ul class="dropdown-menu notifications">
-                        <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>System
-                                space is almost full</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-danger"></span>You have 9
-                                unfinished tasks</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Monthly
-                                report is available</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>Weekly
-                                meeting in 1 hour</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Your
-                                request has been approved</a></li>
-                        <li><a href="#" class="more">See all notifications</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="./assets/images/parson.png" class="img-circle" alt="parson-img">
-                        <i class="icon-submenu fa fa-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="lnr lnr-user"></i> <span>My Profile</span></a></li>
-                        <li><a href="#"><i class="lnr lnr-envelope"></i> <span>Message</span></a></li>
-                        <li><a href="#"><i class="lnr lnr-cog"></i> <span>Settings</span></a></li>
-                        <li id="logout"><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- </div> -->
-            <!-- </div> -->
-            <!--/.container-fluid -->
-        </nav>
-        <!--/nav -->
-    </div>
-    <!--bootstrap.min.js-->
-    <script src="./assets/vendor/bootstrap-4.3.1/js/bootstrap.min.js"></script>
-    <script src="./assets/js/dashboard.js"></script>
+
+  <div id="app">
+    {{ message }}
+  </div>
+
+  <div id="app-2">
+    <span v-bind:title="message">
+      鼠标悬停几秒钟查看此处动态绑定的提示信息！
+    </span>
+  </div>
+
+  <div id="app-3">
+    <p v-if="seen">现在你看到我了</p>
+  </div>
+
+  <div id="app-4">
+    <ol>
+      <li v-for="todo in todos">
+        {{ todo.text }}
+      </li>
+    </ol>
+  </div>
+
+  <div id="app-5">
+    <p>{{ message }}</p>
+    <button v-on:click="reverseMessage">反转消息</button>
+  </div>
+
+  <div id="app-6">
+    <p>{{ message }}</p>
+    <input v-model="message">
+  </div>
+
+  <div id="app-7">
+    <ol>
+      <!--
+        现在我们为每个 todo-item 提供 todo 对象
+        todo 对象是变量，即其内容可以是动态的。
+        我们也需要为每个组件提供一个“key”，稍后再
+        作详细解释。
+      -->
+      <todo-item v-for="item in groceryList" v-bind:todo="item" v-bind:key="item.id"></todo-item>
+    </ol>
+  </div>
+
+  <!--vue dev.js-->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <!--vue prod.js-->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
+
+  <!--jquery-3.4.1.min.js-->
+  <script src="./assets/vendor/jquery/jquery-3.4.1.min.js"></script>
+  <!--fontawesome-all.min.js-->
+  <script src="./assets/js/fontawesome-all.min.js"></script>
+  <!--Custom JS-->
+  <script src="./assets/js/fc.js"></script>
+  <script src="./assets/js/test.js"></script>
+
 </body>
 
 </html>
