--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>ABHouse</title>
     <!-- favicon -->
-    <link rel="icon" href="./assets/images/favicon.png">
+    <link rel="icon" href="./assets/images/favicon.a9672b4628.png">
     <!--font-awesome.min.css-->
     <link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
     <!-- linear icon css
@@ -19,9 +19,9 @@
     <!--bootstrap.min.css-->
     <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
     <!--responsive.css-->
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/responsive.58b6096c.css">
     <!--style.css-->
-    <link rel="stylesheet" href="./assets/css/dashboard.css">
+    <link rel="stylesheet" href="./assets/css/dashboard.1a132a0f.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -508,8 +508,8 @@
     <script src="./assets/vendor/crypto-js/enc-base64-min.js"></script>
 
     <!--Custom JS-->
-    <script src="./assets/js/fc.js"></script>
-    <script src="./assets/js/dashboard.js"></script>
+    <script src="./assets/js/fc.1b12e9a2.js"></script>
+    <script src="./assets/js/dashboard.13b789af.js"></script>
 
 </body>
 
