--- a/register.html
+++ b/register.html
@@ -21,11 +21,11 @@
     <!-- Custom Scrollbar-->
     <!-- <link rel="stylesheet" href="./assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"> -->
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="./assets/css/login.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="./assets/css/login.8ba9cf61.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <!-- <link rel="stylesheet" href="./assets/css/custom.css"> -->
     <!-- Favicon-->
-    <link rel="shortcut icon" href="./assets/images/favicon.png">
+    <link rel="shortcut icon" href="./assets/images/favicon.a9672b4628.png">
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -86,8 +86,8 @@
     <script src="./assets/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
     <!-- Main File-->
     <script src="./assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="./assets/js/fc.js"></script>
-    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/fc.1b12e9a2.js"></script>
+    <script src="./assets/js/login.6ba15ec1.js"></script>
 </body>
 
 </html>
