--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>ABHouse</title>
     <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/swiper.css">
+    <link rel="stylesheet" href="./assets/css/swiper.e901c472.css">
     <link rel="stylesheet" href="./assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="icon" href="./assets/images/favicon.png">
+    <link rel="stylesheet" href="./assets/css/main.8ab6cf93.css">
+    <link rel="icon" href="./assets/images/favicon.a9672b4628.png">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -34,7 +34,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="./assets/images/logo.png" alt="alternative"></a>
+        <a class="navbar-brand logo-image" href="index.html"><img src="./assets/images/logo.a93bf96c.png" alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -362,8 +362,8 @@
     <script src="./assets/js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
     <script src="./assets/js/validator.min.js"></script>
     <!-- Validator.js - Bootstrap plugin that validates forms -->
-    <script src="./assets/js/fc.js"></script>
-    <script src="./assets/js/main.js"></script> <!-- Custom scripts -->
+    <script src="./assets/js/fc.1b12e9a2.js"></script>
+    <script src="./assets/js/main.f09617db.js"></script> <!-- Custom scripts -->
 </body>
 
 </html>
