--- a/login.html
+++ b/login.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/grasp_mobile_progress_circle-1.0.0.min.css">
-    <link rel="stylesheet" href="./assets/css/main.css" id="theme-stylesheet">
-    <link rel="stylesheet" href="./assets/css/login.css" id="theme-stylesheet">
-    <link rel="icon" href="./assets/images/favicon.png">
+    <link rel="stylesheet" href="./assets/css/main.8ab6cf93.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="./assets/css/login.8ba9cf61.css" id="theme-stylesheet">
+    <link rel="icon" href="./assets/images/favicon.a9672b4628.png">
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -26,7 +26,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="./assets/images/logo.png" alt="alternative"></a>
+        <a class="navbar-brand logo-image" href="index.html"><img src="./assets/images/logo.a93bf96c.png" alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -119,8 +119,8 @@
     <script src="./assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
     <!-- Main File-->
     <script src="./assets/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
-    <script src="./assets/js/fc.js"></script>
-    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/fc.1b12e9a2.js"></script>
+    <script src="./assets/js/login.6ba15ec1.js"></script>
 </body>
 
 </html>
