--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>ABHouse Test</title>
   <!-- favicon -->
-  <link rel="icon" href="./assets/images/favicon.png">
+  <link rel="icon" href="./assets/images/favicon.a9672b4628.png">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -75,7 +75,6 @@
   <!--fontawesome-all.min.js-->
   <script src="./assets/js/fontawesome-all.min.js"></script>
   <!--Custom JS-->
-  <script src="./assets/js/fc.js"></script>
   <script src="./assets/js/test.js"></script>
 
 </body>
