--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#services">中小企业服务 <span class="sr-only">(current)</span></a>
-                </li><li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link page-scroll" href="#services">大型企业服务 <span class="sr-only">(current)</span></a>
                 </li>
                 <!-- <li class="nav-item dropdown">
