--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
     <script src="./assets/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
     <script src="./assets/vendor/bootstrap-4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/vendor/jquery/jquery.easing.min.js"></script>
+    <script src="./assets/vendor/crypto-js/crypto-js.js"></script>
     <!-- jQuery Easing for smooth scrolling between anchors -->
     <script src="./assets/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
     <script src="./assets/vendor/jquery/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
