--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small white">Copyright &copy; 2019.ABHouse All rights reserved.</p>
+                    <p class="p-small white">Copyright &copy; 2020. Beijing Runqiao Info All rights reserved.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
