--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ABHouse</title>
+    <title>润桥信息科技</title>
     <!-- favicon -->
     <link rel="icon" href="./assets/images/favicon.a9672b4628.png">
     <!--font-awesome.min.css-->
@@ -464,7 +464,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p class="p-small white">Copyright &copy; 2019.ABHouse All rights reserved.</p>
+                        <p class="p-small white">Copyright &copy; 2019.RunqiaoInfo All rights reserved.</p>
                     </div> <!-- end of col -->
                 </div> <!-- enf of row -->
             </div> <!-- end of container -->
