--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <li class="address"><i class="fas fa-map-marker-alt"></i>北京</li>
                             <!-- <li><i class="fas fa-phone"></i><a href="tel:003024630820">+86 010-88888888</a></li> -->
                             <li><i class="fas fa-envelope"></i><a
-                                    href="mailto:service@runqiaoinfo.com">service@runqiaoinfo.com</a></li>
+                                    href="mailto:support@runqiaoinfo.com">support@runqiaoinfo.com</a></li>
                         </ul>
                         <h3>关注我们</h3>
 
@@ -258,7 +258,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group checkbox">
-                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>我认可和同意ABHouse的 <a
+                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>我认可和同意润桥的 <a
                                 href="privacy-policy.html">隐私政策</a> 和 <a href="terms-conditions.html">条款条件</a>
                             <div class="help-block with-errors"></div>
                         </div>
