--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ABHouse</title>
+    <title>RunqiaoInfo</title>
     <meta name="robots" content="all,follow">
     <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
@@ -100,7 +100,7 @@
                     <a href="register.html" class="signup">Signup</a>
                 </div>
                 <div class="copyrights text-center">
-                    <p>© 2019 ABHouse All Right Reserved</p>
+                    <p>© 2019 RunqiaoInfo All Right Reserved</p>
                 </div>
             </div>
         </div>
