--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ABHouse</title>
+    <title>RunqiaoInfo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -68,7 +68,7 @@
                     </form><small>Already have an account? </small><a href="login.html" class="signup">Login</a>
                 </div>
                 <div class="copyrights text-center">
-                    <p>© 2019 ABHouse All Right Reserved</p>
+                    <p>© 2019 RunqiaoInfo All Right Reserved</p>
                 </div>
             </div>
         </div>
