--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="供给侧,企业,产业升级,新产品,新技术,新零售,新营销">
     <meta name="description" content="北京润桥信息科技有限公司，是新一代的信息技术和解决方案公司。">
-    <title>北京润桥</title>
+    <title>北京润桥信息科技</title>
     <link rel="stylesheet" href="./assets/vendor/bootstrap-4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/vendor/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/swiper.e901c472.css">
@@ -258,7 +258,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group checkbox">
-                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>我认可和同意润桥的 <a
+                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>我认可和同意北京润桥信息科技的 <a
                                 href="privacy-policy.html">隐私政策</a> 和 <a href="terms-conditions.html">条款条件</a>
                             <div class="help-block with-errors"></div>
                         </div>
@@ -291,7 +291,7 @@
                         <h4>相关链接</h4>
                         <ul class="list-unstyled li-space-lg white">
                             <li>
-                                <a class="white" href="http://www.runqiaoinfo.com/" target="_blank">北京润桥</a>
+                                <a class="white" href="http://www.runqiaoinfo.com/" target="_blank">北京润桥信息科技</a>
                             </li>
                             <li>
                                 <a class="white" href="terms-conditions.html" target="_blank">条件条款</a>
@@ -345,7 +345,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small white">Copyright &copy; 2020. Beijing Runqiao Info All rights reserved.</p>
+                    <p class="p-small white">Copyright &copy; 2020. Beijing RunqiaoInfo All rights reserved.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
