fix login style

--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="form-control-submit-button">登录</button>
+                            <button id="btn_submit" type="submit" class="form-control-submit-button">登录</button>
                         </div>
                         <div class="form-message">
-                            <div id="login" class="h3 text-center hidden"></div>
+                            <div id="cmsgSubmit" class="h3 text-center hidden"></div>
                         </div>
                     </form>
                     <!-- end of contact form -->
