--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="./assets/images/logo.a93bf98e.png" alt="alternative"></a>
+        <a class="navbar-brand logo-image" href="index.html"><img src="./assets/images/logo.a95adzh15.png"
+                alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -283,7 +284,8 @@
                 <div class="col-md-6">
                     <div class="text-container about" id="about">
                         <h4>关于我们</h4>
-                        <p class="white">我们致力于产业互联网的发展，助力工业4.0和产业革命，让信息技术和互联网的力量助力更多企业，为人类的进步贡献一份力量，与合作伙伴们一起创造一个更加美好的世界。</p>
+                        <p class="white">我们致力于产业互联网的发展，助力工业4.0和产业革命，让信息技术和互联网的力量助力更多企业，为人类的进步贡献一份力量，与合作伙伴们一起创造一个更加美好的世界。
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-md-2">
@@ -310,7 +312,9 @@
                                 <a class="white" href="http://www.yonyou.com/" target="_blank">用友</a>
                             </li>
                             <li>
-                                <a class="white" href="https://dt.alibaba.com/index.htm?spm=a1zar.8197713.0.0.3bd479a6svNlAU" target="_blank">阿里数据</a>
+                                <a class="white"
+                                    href="https://dt.alibaba.com/index.htm?spm=a1zar.8197713.0.0.3bd479a6svNlAU"
+                                    target="_blank">阿里数据</a>
                             </li>
                             <li>
                                 <a class="white" href="https://www.pdma.org/" target="_blank">PDMA</a>
@@ -329,7 +333,8 @@
                                 <a class="white" href="http://www.zgxyw.org.cn/" target="_blank">中国信用网</a>
                             </li>
                             <li>
-                                <a class="white" href="https://www.cert.org.cn/publish/main/index.html" target="_blank">互联网应急中心</a>
+                                <a class="white" href="https://www.cert.org.cn/publish/main/index.html"
+                                    target="_blank">互联网应急中心</a>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
